2008-08-13  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.h: Accompany each stored mod with information
	  about its bbox at the time it was added, so we can more effectively
	  move it around.

	* Mercator/Terrain.cpp: Implement moving areas around more
	  effectively.

2008-08-13  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp, Mercator/Segment.h: Remove code that handled
	  ownership of allocated terrain mods, as Terrain now owns them.
	  Implement API for removing an individual TerrainMod. Convert
	  storage over to a set for easy removal.

	* Mercator/Terrain.cpp, Mercator/Terrain.h: Add storage for terrain
	  mods. Flesh out the API for mods and areas allowing them
	  to be modified in place, and allowing mods to be removed.

	* tests/testArea.cpp: Add test stub for removing terrain mods.

2008-08-13  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.cpp: Don't mess around with surface data
	  for segments which don't intersect with a modifier.

2008-08-12  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Increment the interface version as the API has
	  changed.

2008-08-12  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp, Mercator/Segment.h,
	  Mercator/Terrain.cpp, Mercator/Terrain.h:
	  Add new interface to remove Area mods from the terrain.

	* tests/testArea.cpp: Update the tests to cover removeArea().

2008-08-07  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Segment.cpp: Fix applyMod() so it correctly calculates
	  mod offset in segments other than 0,0.

	* tests/testTerrainMod.cpp: Re-order setup of modified terrain
	  in such an order that the modifiers actually have an effect.

2008-08-04  Al Riddoch  <alriddoch@googlemail.com>

	* Mercator/Terrain.cpp: Fix one of the more obvious gratuitous
	  ineffeciencies. Use I_ROUND rather than integer casting.
	  Add some debug code for debugging issues with modifiers.

2008-07-02  Erik Hjortsberg <erik.hjortsberg@iteam.se>
